fixed wrapping... images cant move now... it worked before the images were in place though...

--- a/Test stuff/Sandbox/styles/tierList.css
+++ b/Test stuff/Sandbox/styles/tierList.css
@@ -26,15 +26,16 @@ h1 {
     align-items: center;
     justify-content: space-between;
     padding: 10px;
-    width: 100vw;
+    width: 98vw;
     height: 100px;
 }
 
 .row,
 .card-container {
     display: flex;
-    min-width: 100%;
-    min-height: 100px;
+    flex-wrap: wrap;
+    width: 98%;
+    height: 100px;
     background-color: rgb(56, 56, 56);
     border: 1px solid black;
 }
